library/constraints/require-ingress-class/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireIngressClass
metadata:
  name: require-ingress-class
spec:
  match:
    kinds:
      - apiGroups: ["networking.k8s.io"]
        kinds: ["Ingress"]
